# hantawatch

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
docs/: AUTOMATION_OVERHAUL_BRIEF.md  AUTOMATION_OVERHAUL_KICKOFF.md  BRIEF_AND_TIMELINE_IMPROVEMENTS.md  CURSOR_HANDOFF_2026-05-28.md  DATA_CHAIN_INVENTORY.md  DATA_OPS.md  DEPLOY.md  DEPLOY_AND_ADMIN.md  (+13 more)
services/collector/: _explore_arcgis.py  _test_arcgis.py  main.py  pyproject.toml
services/collector/hantawatch_collector/: __init__.py  _compliance.py  _compliance_audit.py  ai_brief.py  andv_dashboard.py  builder.py  country_signals.py  distance.py  distances.py  ecdc.py  gazetteer.py  hpi.py  imports_proposals.py  io_utils.py  main.py  news_leads.py  official_sources.py  outbreak_status.py  realtime_extractor.py  realtime_feed.py  situation_builder.py  surveillance_leads.py  who_don.py
services/collector/tests/: test_ai_brief.py  test_brief_guardrail.py  test_builder_cluster_registry.py  test_case_table_outbreak_only.py  test_case_table_outbreak_only.ts  test_compliance.py  test_compliance_audit.py  test_ecdc_url_migration.py  test_hpi.py  test_imports_proposal_diff.py  test_news_leads_authoritative.py  test_news_leads_format.py  test_outbreak_status_builder.py  test_outbreak_status_namezh.py  test_outbreak_status_parser.py  test_p1_integration.py  test_realtime_extractor.py  test_situation_builder.py  test_who_don_api.py
services/collector/tests/fixtures/2026-05-25-snapshot/: daily-brief.json  outbreak-status.json  recent-cases-intl.json
(+189 files in other folders)
